@@ -2,6 +2,12 @@ AC_INIT(init-test.c)
 WITH_CCOPTS
 CONFIG_RULES
 KRB_INCLUDE
+AC_CHECK_PROG(RUNTEST,runtest,runtest)
+AC_KRB5_TCL	
+if test "$TCL_LIB" != "" ;  then
+	DO_TCL=tcl
+fi
+AC_SUBST(DO_TCL)
 USE_KADMCLNT_LIBRARY
 USE_GSSAPI_LIBRARY
 USE_KADMSRV_LIBRARY
